syntax = "proto3";

package proto;
option go_package = "./;proto";

import "google/api/annotations.proto";
import "utils.proto";
import "handler.proto";


// basic service
service StreamingToolsService {
  // 列出媒体源
  rpc ListMediaSource(ListMediaSourceRequest) returns (ListMediaSourceResponse) {
    option (google.api.http) = {
      post: "/v1/media_source/list"
      body: "*"
    };
  }
  // 创建/更新媒体源
  rpc UpsertMediaSource(UpsertMediaSourceRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/media_source/upsert"
      body: "*"
    };
  }
  // 删除媒体源
  rpc DeleteMediaSource(DeleteMediaSourceRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/media_source/delete"
      body: "*"
    };
  }
  // 列出摄像头
  rpc ListCamera(ListCameraRequest) returns (ListCameraResponse) {
    option (google.api.http) = {
      post: "/v1/camera/list"
      body: "*"
    };
  }
  // 创建/更新摄像头
  rpc UpsertCamera(UpsertCameraRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/camera/upsert"
      body: "*"
    };
  }
  // 删除摄像头
  rpc DeleteCamera(DeleteCameraRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/camera/delete"
      body: "*"
    };
  }
  // 列出媒体文件
  rpc ListMediaFile(ListMediaFileRequest) returns (ListMediaFileResponse) {
    option (google.api.http) = {
      post: "/v1/media_file/list"
      body: "*"
    };
  }
  // 创建/更新媒体文件
  rpc UpsertMediaFile(UpsertMediaFileRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/media_file/upsert"
      body: "*"
    };
  }
  // 删除媒体文件
  rpc DeleteMediaFile(DeleteMediaFileRequest) returns (Response) {
    option (google.api.http) = {
      post: "/v1/media_file/delete"
      body: "*"
    };
  }
}
